# voxel-engine-showcase

./: .gitignore  .windsurfrules  Cargo.toml  deploy_web.sh  run.sh  switch_target.sh  web.sh
.cargo/: config.toml
.github/workflows/: deploy_shaders.yaml  deploy_textures.yaml  deploy_wasm.yaml  showcase.yml
ai_workflows/: code-documentation.workflow  documentation-investigation.workflow  domain-flow.workflow  update-documentation.workflow
assets/shaders/: README.md  basic_shader.wgsl  basic_shader_texture_binding_array.wgsl
assets/shaders/ui/: shader.wgsl
assets/textures/: data.atl
docs/: README.md  rules.md
docs/architecture/: overview.md
docs/domain_flows/: README.md
docs/domain_flows/system/: README.md  bucket_based_rendering.md  chunk_data_generation_subflow.md  chunk_loading.md  chunk_memory_management_subflow.md  chunk_mesh_generation_subflow.md  chunk_visibility_subflow.md
docs/domain_flows/user_interaction/: README.md
src/: lib.rs  main.rs
src/application_state/: graphics_resources_builder.rs  input_manager.rs  input_state.rs  mod.rs
src/core/: injection_system.rs  mod.rs  mt_resource.rs  mt_system.rs  st_resource.rs  st_system.rs
src/engine_state/: buffer_state.rs  mod.rs
src/engine_state/camera_state/: camera.rs  mod.rs
src/engine_state/rendering/: bind_group_state.rs  mod.rs  pipeline_manager.rs  query_manager.rs  raw_query_manager.rs  texture.rs  vertex.rs
src/engine_state/rendering/meshing/: bucket_manager.rs  mod.rs  renderer.rs  (+1 more)
src/engine_state/task_management/: mod.rs  task.rs
src/engine_state/voxels/: mod.rs  world.rs
(+19 files in other folders)
