[package]
name = "voxel-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitvec = "1.0.1"
bytemuck = { version = "1.23.0", features = [ "derive", "min_const_generics" ] }
cfg-if = "1.0.0"
cgmath = "0.18"
env_logger = "0.11.8"
fastrand = "2.2.0"
image = { version = "0.25.6", default-features = false, features = ["png"] }
log = "0.4.27"
noise = "0.9.0"
num = "0.4.0"
num-derive = "0.4.2"
num-traits = "0.2.15"
phf = { version = "0.11.3", features = ["macros"] }
phf_shared = "0.11.3"
pollster = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
web-time = "1.1.0"
winit = "0.30.8"
lru = "0.14.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
wgpu = { version = "25.0.2" }

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
futures = "0.3.31"
lazy_static = "1.5.0"
reqwest = { version = "0.12.11", features = [ "json" ] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm_thread = "0.3.3"
web-sys = { version = "0.3.77", features = ["Document", "Element", "Window", "console", "HtmlCanvasElement", "HtmlCollection", "Worker"] }
wgpu = { version = "26.0.1", default-features = false, features = ["webgl", "webgpu", "wgsl"] }

[features]
gpu_queries = ["wgpu_timestamp_query"]
wgpu_timestamp_query = []

[profile.release]
lto = true